# -recall-ai-learning-system

./: .gitignore  README.md  Requirements.txt  create_tables.py  main.py  pyproject.toml
UTILS/: audio_processor.py
api/: auth.py  meetings.py  quizzes.py  topics.py
auth/: dependencies.py  security.py
core/: cross_topic_rag.py  diarizer.py  email_service.py  extractor.py  graph_nodes.py  graph_pipeline.py  graph_state.py  pdf_export.py  quiz_engine.py  rag_engine.py  topic_matcher.py  transcriber.py  vector_store.py
db/: database.py  models.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/topics/[topicId]/: page.tsx
frontend/app/topics/[topicId]/meetings/[meetingId]/: page.tsx
frontend/app/topics/[topicId]/quiz/[quizId]/: page.tsx
frontend/components/: KnowledgeFlags.tsx  SourcesList.tsx  Spinner.tsx  TopBar.tsx  TopicSidebar.tsx  TopicStats.tsx
frontend/lib/: api.ts  auth.ts
schemas/: extraction.py  meeting.py  topic.py
