[project]
name = "video-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bcrypt>=4.0.1,<5.0.0",
    "chromadb>=0.5.0",
    "deep-translator>=1.11.4",
    "fastapi>=0.138.0",
    "ffmpeg-python>=0.2.0",
    "fpdf2>=2.7.9",
    "groq>=0.37.1",
    "huggingface-hub>=0.23.0",
    "langchain>=0.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=0.0.3",
    "langchain-mistralai>=0.1.0",
    "langgraph>=1.2.5",
    "mistralai>=0.4.0",
    "numpy>=1.26.0",
    "openai-whisper>=20231117",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pyannote-audio",
    "pydantic[email]>=2.13.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "reportlab>=4.2.0",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.35.0",
    "streamlit-extras>=0.4.0",
    "tiktoken>=0.7.0",
    "torch",
    "torchaudio",
    "tqdm>=4.66.0",
    "uvicorn>=0.49.0",
    "watchdog>=4.0.0",
    "yt-dlp>=2024.4.9",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
